fixes spacing @ item level #47

--- a/dspace/modules/xmlui/src/main/webapp/themes/dmlcz5/css/dmlstyle.css
+++ b/dspace/modules/xmlui/src/main/webapp/themes/dmlcz5/css/dmlstyle.css
@@ -184,3 +184,8 @@ ul.list-group-flush li:first-child
 {
     cursor: pointer;
 }
+
+div.card div.card-block:nth-of-type(n+2)
+{ 
+    padding-top: 0;
+}
